# calculator-task

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  new_token.cpp  new_token.h  postfix.cpp  postfix.h  token.cpp  token.h  token_builder.cpp  token_builder.h  token_concrete.cpp  token_concrete.h  token_factory.h  token_general.h  token_strategies.h
src/containers/: CMakeLists.txt
src/postfix_calculator/: CMakeLists.txt
src/postfix_calculator/converter/: CMakeLists.txt  postfix.h
src/postfix_calculator/token/: CMakeLists.txt  token_builder.cpp  token_builder.h  token_concrete.cpp  token_concrete.h  token_factory.h  token_general.h
src/smart_pointers/: CMakeLists.txt  shared_ptr.h  unique_ptr.h
src/util/: CMakeLists.txt  checked_delete.hpp  container.h  shared_ptr.h  stack.h  unique_ptr.h  util.cpp  util.h  vector.h
test/: CMakeLists.txt  new_postfix_test.cpp  new_token_test.cpp  postfix_test.cpp  token_test.cpp
test/util/: CMakeLists.txt  container_test.cpp  shared_ptr_test.cpp  unique_ptr_test.cpp
