set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(util)
add_subdirectory(containers)
add_subdirectory(smart_pointers)
add_subdirectory(postfix_calculator)

add_library(src_impl INTERFACE)

target_link_libraries(src_impl INTERFACE postfix_calculator_impl smart_pointers_int containers_int util_int)
target_link_libraries(src_impl INTERFACE compiler_flags)